// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[archer] 1`] = `
{
  "accRating": 15.225,
  "accuracyPct": 8.225,
  "allStatTotal": 263,
  "atk": 63,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 8.6,
  "critMult": 1.5550299513149461,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 148,
  "evaRating": 19.200000000000003,
  "evasionPct": 19.200000000000003,
  "extraAttackChancePct": 109,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 55,
  "magicAtk": 8,
  "magicDef": 8,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 218,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[lowbie] 1`] = `
{
  "accRating": 8.775,
  "accuracyPct": 1.775,
  "allStatTotal": 100,
  "atk": 11,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4604255649461715,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11.25,
  "healMult": 1.1500000000000001,
  "hp": 190,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 8,
  "maxHp": 190,
  "maxMp": 92,
  "minDamage": 3,
  "mp": 92,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22.5,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[mage] 1`] = `
{
  "accRating": 11.684999999999999,
  "accuracyPct": 4.685,
  "allStatTotal": 253,
  "atk": 9,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.45280302180028,
  "critResistPct": 4.5,
  "def": 6,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 11.25,
  "healMult": 1.33,
  "hp": 640,
  "intStat": 148,
  "lukStat": 15,
  "magicAtk": 47,
  "magicDef": 21,
  "maxHp": 640,
  "maxMp": 501,
  "minDamage": 9,
  "mp": 501,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 22.5,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[ninja] 1`] = `
{
  "accRating": 10.825,
  "accuracyPct": 3.8249999999999997,
  "allStatTotal": 255,
  "atk": 29,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 16.2,
  "critMult": 1.7329671756295133,
  "critResistPct": 1.5,
  "def": 6,
  "dexStat": 60,
  "evaRating": 16.8,
  "evasionPct": 16.8,
  "extraAttackChancePct": 45,
  "healMult": 1.1500000000000001,
  "hp": 640,
  "intStat": 15,
  "lukStat": 135,
  "magicAtk": 8,
  "magicDef": 8,
  "maxHp": 640,
  "maxMp": 227,
  "minDamage": 2,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 90,
  "vitStat": 15,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[tank] 1`] = `
{
  "accRating": 9.175,
  "accuracyPct": 2.175,
  "allStatTotal": 275,
  "atk": 38,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.4755190439471157,
  "critResistPct": 1.5,
  "def": 30,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 8.75,
  "healMult": 1.7700000000000002,
  "hp": 835,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 8,
  "maxHp": 835,
  "maxMp": 227,
  "minDamage": 10,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 17.5,
  "vitStat": 170,
}
`;

exports[`골든: derive PlayerCombat 스냅샷 (Stage 1 상수 이관 가드) > derive[warrior] 1`] = `
{
  "accRating": 11.235,
  "accuracyPct": 4.234999999999999,
  "allStatTotal": 263,
  "atk": 55,
  "attackCount": 1,
  "classTier": undefined,
  "critChancePct": 1.7999999999999998,
  "critMult": 1.5501420281376743,
  "critResistPct": 1.5,
  "def": 18,
  "dexStat": 15,
  "evaRating": 2.7,
  "evasionPct": 2.7,
  "extraAttackChancePct": 5.75,
  "healMult": 1.31,
  "hp": 720,
  "intStat": 15,
  "lukStat": 15,
  "magicAtk": 8,
  "magicDef": 8,
  "maxHp": 720,
  "maxMp": 227,
  "minDamage": 17,
  "mp": 227,
  "passiveCounterChancePct": undefined,
  "passiveDefPenetrationPct": undefined,
  "passiveTurnHealPctMaxHp": undefined,
  "spd": 11.5,
  "vitStat": 55,
}
`;

exports[`골든: resolveBattle PvE 지문 (엔진 가드) > PvE 지문 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "warrior_vs_들개",
    "logSha": "781e33ad365b19c2b6a0f4f8955dccf40d89fd2d",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 6,
  },
  {
    "enemyHp": 0,
    "label": "warrior_vs_골렘",
    "logSha": "7a39c83de6ff61d3344cc0e519db7938fcbedd39",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 15,
  },
  {
    "enemyHp": 0,
    "label": "ninja_crit_vs_늑대",
    "logSha": "fda37a08aeaa1d05b63fd2319f40ab0e690189d4",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 227,
    "turns": 40,
  },
  {
    "enemyHp": 0,
    "label": "archer_pen_vs_골렘",
    "logSha": "4779424562461f3c188e512c297aabe8aeb18992",
    "outcome": "win",
    "playerHp": 635,
    "playerMp": 227,
    "turns": 12,
  },
  {
    "enemyHp": 0,
    "label": "magic_vs_약탈자",
    "logSha": "e5d72d0394cf82de1e61abe59cdc08f0384caed7",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 35,
  },
  {
    "enemyHp": 0,
    "label": "counter_tank_vs_들소",
    "logSha": "36b39de6dfcab27b045774d627242bc1e6cf4ff3",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 47,
  },
  {
    "enemyHp": 0,
    "label": "heal_vs_들소_boss",
    "logSha": "220c96404ddde447cd28a43b2382b209eb9e064e",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 57,
  },
  {
    "enemyHp": 0,
    "label": "mage_skills_vs_골렘",
    "logSha": "197d3239ef2000ab68a309a00d714944af602ef6",
    "outcome": "win",
    "playerHp": 640,
    "playerMp": 501,
    "turns": 14,
  },
  {
    "enemyHp": 0,
    "label": "lowbie_vs_들개",
    "logSha": "769b5463a69dcbaf09c1271cc38edc60125470b4",
    "outcome": "win",
    "playerHp": 190,
    "playerMp": 92,
    "turns": 18,
  },
]
`;

exports[`골든: resolveBattlePvP 지문 (PvP 엔진 가드) > PvP 지문 매트릭스 1`] = `
[
  {
    "label": "warrior_vs_mage",
    "logSha": "79096115ee5ba670b4102e1f2d540b9883c6a919",
    "outcome": "p1_win",
    "turns": 57,
  },
  {
    "label": "archer_vs_ninja",
    "logSha": "dbe3a8df7f69219351a6ee1cd560f25b2d4e2f56",
    "outcome": "p1_win",
    "turns": 49,
  },
  {
    "label": "tank_vs_warrior",
    "logSha": "9a876e224fbf1052c59250b0a242ffbeb34f50e7",
    "outcome": "p2_win",
    "turns": 139,
  },
]
`;

exports[`골든: 적 페이즈 메커닉 커버리지 (리팩터 가드) > 적 페이즈 메커닉 매트릭스 1`] = `
[
  {
    "enemyHp": 0,
    "label": "enemy_dot_tick",
    "logSha": "a59f805ccddb15aef45b316111a75ee33a9430b1",
    "outcome": "win",
    "playerHp": 717,
    "playerMp": 227,
    "turns": 16,
  },
  {
    "enemyHp": 0,
    "label": "chill_enemy",
    "logSha": "50967eda127ce4b25f3bd48c4d538305c589d78e",
    "outcome": "win",
    "playerHp": 807,
    "playerMp": 227,
    "turns": 29,
  },
  {
    "enemyHp": 0,
    "label": "thorns_reflect",
    "logSha": "1ac98e8d6a856d15feec19a23624c8b41c092ca6",
    "outcome": "win",
    "playerHp": 835,
    "playerMp": 227,
    "turns": 26,
  },
  {
    "enemyHp": 0,
    "label": "evade_reflect",
    "logSha": "8473585ac5172aa4f4890c43aceeba7d5e31ca52",
    "outcome": "win",
    "playerHp": 625,
    "playerMp": 227,
    "turns": 61,
  },
  {
    "enemyHp": 0,
    "label": "enrage_enemy",
    "logSha": "d93e1870a46bd6f3ed48a3eee939b3dc3cfd93c4",
    "outcome": "win",
    "playerHp": 720,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "brace_enemy",
    "logSha": "a28b0d2de3cfcf3c5e279cfabf19e1dd15149b7f",
    "outcome": "win",
    "playerHp": 714,
    "playerMp": 227,
    "turns": 19,
  },
  {
    "enemyHp": 0,
    "label": "heavyblow_enemy",
    "logSha": "6d7dc0a07d3cf7cc386ed9ccfab23a632345f230",
    "outcome": "win",
    "playerHp": 820,
    "playerMp": 227,
    "turns": 55,
  },
]
`;
